<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/hello_second_fragment"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />

    <RadioGroup
        android:layout_width="226dp"
        android:layout_height="166dp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second">

        <RadioButton
            android:id="@+id/dogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog" />

        <RadioButton
            android:id="@+id/catButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat" />

        <RadioButton
            android:id="@+id/frogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frog" />

    </RadioGroup>

    <ImageView
        android:id="@+id/willow"
        android:layout_width="237dp"
        android:layout_height="234dp"
        android:src="@drawable/willow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <ImageView
        android:id="@+id/spooky"
        android:layout_width="236dp"
        android:layout_height="232dp"
        android:src="@drawable/spooky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <ImageView
        android:id="@+id/louie"
        android:layout_width="234dp"
        android:layout_height="230dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/louie__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

</androidx.constraintlayout.widget.ConstraintLayout>